# NetworkMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cJSON/: CMakeLists.txt
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  config.c  config.h  main.c  utils.c  utils.h
src/posix/: network.c  network.h  threading.c  threading.h
src/win32/: network.c  network.h  threading.c  threading.h
tests/manual/: client.js
